--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /exercicios/Exercicios012/nbproject/private/
 /exercicios/Exercicios012/build/
+/exercicios/Exercicio13/nbproject/private/
+/exercicios/Exercicio13/build/
