--- a/exercicios/.gitignore
+++ b/exercicios/.gitignore
@@ -1,3 +1,5 @@
 /exercicio014/nbproject/private/
 /exercicio015/nbproject/private/
 /exercicio015/build/
+/exercicio016/nbproject/private/
+/exercicio016/build/
