--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /exercicios/Exercicios012/build/
 /exercicios/Exercicio13/nbproject/private/
 /exercicios/Exercicio13/build/
+/exercicios/exercicio017/nbproject/private/
+/exercicios/exercicio017/build/
+/exercicios/exercicio018/nbproject/private/
+/exercicios/exercicio018/build/
+/exercicios/exercicio018/dist/
