desafio conversor de moedas

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /exercicios/exercicio018/nbproject/private/
 /exercicios/exercicio018/build/
 /exercicios/exercicio018/dist/
+/exercicios/exercicio0001/nbproject/private/
+/exercicios/exercicio0001/build/
+/desafios/conversordemoeda/nbproject/private/
+/desafios/conversordemoeda/build/
