--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /exercicios/exercicio0001/build/
 /desafios/conversordemoeda/nbproject/private/
 /desafios/conversordemoeda/build/
+/desafios/exercicio0002/nbproject/private/
+/desafios/exercicio0003/nbproject/private/
+/desafios/exercicio0003/build/
