--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 /desafios/exercicio0002/nbproject/private/
 /desafios/exercicio0003/nbproject/private/
 /desafios/exercicio0003/build/
+/exercicios/exercicio0003/build/
+/exercicios/exercicio0003/nbproject/private/
+/desafios/exercicio0004/nbproject/private/
+/desafios/exercicio0004/build/
