--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /exercicios/exercicio0003/nbproject/private/
 /desafios/exercicio0004/nbproject/private/
 /desafios/exercicio0004/build/
+/desafios/exercicio0006/nbproject/private/
