--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /desafios/exercicio0004/nbproject/private/
 /desafios/exercicio0004/build/
 /desafios/exercicio0006/nbproject/private/
+/exercicios/exercicio0005/build/
