--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 /desafios/exercicio0004/build/
 /desafios/exercicio0006/nbproject/private/
 /exercicios/exercicio0005/build/
+/exercicios/exercicio0003/dist/
+/desafios/exercicio027/nbproject/private/
+/desafios/exercicio027/build/
