--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /exercicios/exercicio0003/dist/
 /desafios/exercicio027/nbproject/private/
 /desafios/exercicio027/build/
+/desafios/exercicio028/nbproject/private/
