--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /desafios/exercicio027/nbproject/private/
 /desafios/exercicio027/build/
 /desafios/exercicio028/nbproject/private/
+/exercicios/exercicio029/nbproject/private/
