--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /desafios/exercicio027/build/
 /desafios/exercicio028/nbproject/private/
 /exercicios/exercicio029/nbproject/private/
+/exercicios/exercicio034/nbproject/private/
+/exercicios/exercicio034/build/
