--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /exercicios/exercicio029/nbproject/private/
 /exercicios/exercicio034/nbproject/private/
 /exercicios/exercicio034/build/
+/exercicios/exercicio035/Interfaces/nbproject/private/
