--- a/exercicios/exercicio035/Interfaces/nbproject/project.properties
+++ b/exercicios/exercicio035/Interfaces/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/exercicio034.jar
+dist.jar=${dist.dir}/Interfaces.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/exercicio034
+dist.jlink.output=${dist.jlink.dir}/Interfaces
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=exercicio034
-main.class=exercicio034.Exercicio034
+jlink.launcher.name=Interfaces
+main.class=View.Mensagens
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
