--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /exercicios/exercicio034/nbproject/private/
 /exercicios/exercicio034/build/
 /exercicios/exercicio035/Interfaces/nbproject/private/
+/exercicios/exercicio035/Interfaces/build/
