--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /exercicios/exercicio034/build/
 /exercicios/exercicio035/Interfaces/nbproject/private/
 /exercicios/exercicio035/Interfaces/build/
+/exercicios/exercicios036/nbproject/private/
