--- a/exercicios/exercicios036/nbproject/project.properties
+++ b/exercicios/exercicios036/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/exercicios036.jar
+dist.jar=${dist.dir}/exercicio036.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/exercicios036
+dist.jlink.output=${dist.jlink.dir}/exercicio036
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=exercicios036
+jlink.launcher.name=exercicio036
 main.class=Principal.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
