--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /exercicios/exercicio035/Interfaces/nbproject/private/
 /exercicios/exercicio035/Interfaces/build/
 /exercicios/exercicios036/nbproject/private/
+/exercicios/exercicios036/build/
